@@ -32,7 +32,7 @@ all:	$(PROGS)
 install:	all $(SPECIAL) objview.pl objpict.pl glare.csh dayfact.csh \
 rlux.csh raddepend.csh trad.wsh objline.csh compamb.csh vinfo.csh \
 ltview.pl ltpict.pl genambpos.pl fieldcomb.csh genklemsamp.pl \
-genskyvec.pl genBSDF.pl $(LIBFILES)
+genskyvec.pl genBSDF.pl bsdfview.pl $(LIBFILES)
 	cp $(PROGS) $(INSTDIR)
 	cp objview.pl $(INSTDIR)/objview
 	cp objline.csh $(INSTDIR)/objline
@@ -49,6 +49,7 @@ genskyvec.pl genBSDF.pl $(LIBFILES)
 	cp genklemsamp.pl $(INSTDIR)/genklemsamp
 	cp genskyvec.pl $(INSTDIR)/genskyvec
 	cp genBSDF.pl $(INSTDIR)/genBSDF
+	cp bsdfview.pl $(INSTDIR)/bsdfview
 	cp ltview.pl $(INSTDIR)/ltview
 	cp ltpict.pl $(INSTDIR)/ltpict
 	cd $(INSTDIR) ; chmod 755 objview objpict \
